<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonEnglish"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="16dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:checkedButton="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkEnglish"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/english"
            android:textColorLink="@color/colorPrimary" />

        <CheckBox
            android:id="@+id/checkSpanish"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/spanish"
            android:textColorLink="@color/colorPrimary" />

        <CheckBox
            android:id="@+id/checkChinese"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/chinese"
            android:textColorLink="@color/colorPrimary" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>